--- a/main.html
+++ b/main.html
@@ -8,8 +8,46 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<table border='1' style="width:100%; height:50vh;">
+		<thead>
+			<th>Roll numbers</th>
+			<th>Names</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+			</tr>
+			
+		</tbody>
+	</table>
+	<h1>List of medias</h1>
+	<ol>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="img">
+		</li>
+		<li>
+			<video controls >
+				<source src='http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4'>
+			</video>
+		</li>
+		<li>
+			<audio controls >
+				<source src='http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg'>
+			</audio>
+		</li>
+	</ol>
+
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
 
