--- a/main.html
+++ b/main.html
@@ -35,12 +35,12 @@
 			<img src="https://picsum.photos/id/123/200/300" alt="img">
 		</li>
 		<li>
-			<video controls >
+			<video controls src='http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4' width="300px" >
 				<source src='http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4'>
 			</video>
 		</li>
 		<li>
-			<audio controls >
+			<audio controls src='http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg' >
 				<source src='http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg'>
 			</audio>
 		</li>
